<resources>
    <string name="app_name">FlashCards</string>
    <string name="tv_results">Results</string>
    <string name="tv_folders">Folders</string>
    <string name="tv_lists">Lists</string>
    <string name="btn_addFolder">add folder</string>
    <string name="btn_playAgainAll">Retry</string>
    <string name="btn_playAgainWrong">Retry Wrong</string>
    <string name="btn_importList">Import</string>
    <string name="btn_addList">Add</string>
    <string name="btn_startAll">Start All</string>
    <string name="btn_startSelection">Start Selection</string>
    <string name="btn_startList">Start</string>
    <string name="listCfg_tv_showSide">Question of</string>
    <string name="listCfg_tv_ListLength">How many items do you want to guess?</string>
    <string name="listCfg_tv_TimeTrial">Time Trial</string>
    <string name="listCfg_checkbox_TimeReset">Reset</string>
    <string name="listCfg_radioBtn_Left">Left</string>
    <string name="listCfg_radioBtn_Right">Right</string>
    <string name="listCfg_PauseOnError">Pause on error</string>
    <string name="listCfg_UseTextToSpeech">Use Text to Speech</string>
    <string name="listCfg_radioBtn_SpeakAnswer">Speak answer</string>
    <string name="listCfg_radioBtn_SpeakQuestion">Speak question</string>
    <string name="tv_yourAnswer">Your Answer</string>
    <string name="resultComment100">EZ game EZ life!</string>
    <string name="resultCommentLess50">Fail of the week!</string>
    <string name="createFolderYesOption">Create folder</string>
    <string name="createFolderNoOption">Cancel</string>
    <string name="createFolderDialogTitle">Create a new folder</string>
    <string name="createFolderDialogMessage">Set folder name</string>
    <string name="listImportFilePicker">Select the csv file</string>
    <string name="listImportFileError">An error occurred while creating the file</string>
    <string name="folderCreateError">An error occurred while creating the folder</string>
    <string name="addFileAlert">Please add a file</string>
    <string name="question">Question</string>
    <string name="deleteList">Do you want to delete the list?</string>
    <string name="delete">Delete</string>
    <string name="deleted">deleted</string>
    <string name="added">added</string>
    <string name="changed">changed</string>
    <string name="deleteFolder">Do you want to delete the folder?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="listName">List Name</string>
    <string name="leftColumn">Left Column</string>
    <string name="RightColumn">Right Column</string>
    <string name="addListError">Fill out all fields!</string>
</resources>
