<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/listName"
        android:textSize="26sp"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/leftEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/leftColumn"
            android:textSize="18sp"
            android:layout_weight="1"
            android:text="" />

        <EditText
            android:id="@+id/rightEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/RightColumn"
            android:textSize="18sp"
            android:layout_weight="1"
            android:text="" />

    </LinearLayout>

</LinearLayout>