<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/listTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_lists"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_below="@+id/listTitle"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/leftHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewStart"
                android:text="@string/listCfg_radioBtn_Left"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/rightHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:text="@string/listCfg_radioBtn_Right"
                android:textSize="20sp"/>

        </LinearLayout>

        <ListView
            android:id="@+id/listList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="4dp"
            android:divider="@android:color/transparent"/>

    </LinearLayout>

</RelativeLayout>
