<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/folderListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_results"
        android:textSize="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tv_resultScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/folderListTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_results" />

    <TextView
        android:id="@+id/tv_resultComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_resultScore"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_results" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_below="@+id/tv_resultComment"
            android:layout_centerHorizontal="true">

            <ListView
                android:id="@+id/resultList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dividerHeight="4dp"
                android:divider="@android:color/transparent" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_playAgainAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_playAgainAll"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>

        <Button
            android:id="@+id/btn_playAgainWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_playAgainWrong"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>

</RelativeLayout>