<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/tv_guess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listCfg_tv_Guess"
                android:layout_weight="2" />

            <RadioGroup
                android:id="@+id/sideRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/radioButtonLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listCfg_radioBtn_Left"
                    android:layout_weight="1" />

                <RadioButton
                    android:id="@+id/radioButtonRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listCfg_radioBtn_Right"
                    android:layout_weight="1" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_listLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listCfg_tv_ListLength"
                android:textAlignment="center"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:weightSum="8">

                <SeekBar
                    android:id="@+id/numberOfListItemsSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="100"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/numberOfListItemsSliderLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textAlignment="center"
                    android:layout_weight="7"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <CheckBox
                    android:id="@+id/timeTrialActive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/listCfg_tv_TimeTrial" />

                <CheckBox
                    android:id="@+id/timeTrialReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/listCfg_checkbox_TimeReset" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTimeSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:weightSum="8">

                <SeekBar
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:id="@+id/timeSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="30"
                    android:progress="5"/>

                <TextView
                    android:id="@+id/timeSliderLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:textAlignment="center"
                    android:layout_weight="7"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_startList" />


</RelativeLayout>
